src/tests/keep_parsing_3.include3.ctxi

word f3(word a)
	return a / 0; // error
end
